--- a/restaurants/templates/navbar.html
+++ b/restaurants/templates/navbar.html
@@ -14,6 +14,9 @@
           <div class="nav-link">{{request.user}}</div>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{% url 'favorite-restaurant' %}">Favorite List</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{% url 'signout' %}">Signout</a>
         </li>
       {% else %}
